# steering-center

./: .gitignore  Cargo.toml  README.md  build-and-run.sh
.megg/: decisions.md  map.md
examples/hello-plugin-rust/src/: main.rs
frontend/: package-lock.json  package.json
frontend/.megg/: info.md
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useSystemStats.ts  useWebSocket.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  History.tsx  PluginView.tsx  Plugins.tsx  Scripts.tsx  Settings.tsx  SystemMonitor.tsx
openspec/changes/add-dynamic-plugin-system/: tasks.md
openspec/changes/add-dynamic-plugin-system/.megg/: decisions.md
openspec/ideas/: idea-1768341925023.md  idea-1768341946145.md  idea-1768341979006.md
plugins/.metadata/: config.json
scripts/: disk-usage.sh  system-info.sh  update-check.sh
src/: db.rs  lib.rs  main.rs
src/.megg/: decisions.md  info.md
src/routes/: api.rs  auth.rs  mod.rs  plugins.rs  ws.rs
src/services/: auth.rs  executor.rs  logging.rs  mod.rs  plugins.rs  system.rs
tests/: plugins_integration.rs
toru-plugin-api/: Cargo.toml  README.md
toru-plugin-api/src/: error.rs  lib.rs  message.rs  protocol.rs  types.rs
