[package]
name = "toru-plugin-api"
version = "0.1.0"
edition = "2021"
description = "Plugin API for Toru Steering Center"
license = "MIT"
repository = "https://github.com/toruai/steering-center"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
